# launcher-rust

./: .gitattributes  .gitignore  CLAUDE.md  CODEOWNERS  README.md  index.html  package-lock.json  package.json  pre-build-auto-auth.ps1  test.txt  update_version.py  update_version.rs  vite.config.ts
.githooks/: pre-commit
.github/actions/copy-in-s3/: action.yml
.github/actions/get-short-sha/: action.yml
.github/actions/upload-to-s3/: action.yml
.github/workflows/: bump-version.yml  ci.yml  cleanup-s3-artifacts.yml  lint.yml  manual-release.yml  pr-deploy-status.yml  publish-dev-installer.yml  release.yml  store-release.yml  tests.yml  typechecking.yml
core/: Cargo.toml  Cargo_BASE_1910.toml  Cargo_REMOTE_1910.toml
core/src/: analytics.rs  app.rs  attempts.rs  auto_auth.rs  channel.rs  config.rs  deeplink_bridge.rs  download_origin_metadata.rs  environment.rs  errors.rs  flow.rs  installs.rs  instances.rs  lib.rs  logs.rs  main.rs  monitoring.rs  processes.rs  protocols.rs  s3.rs  types.rs  utils.rs
core/src/analytics/: client.rs  event.rs  fingerprint.rs  network_info.rs  null_client.rs  session.rs
core/src/analytics/infrastructure/: event_queue.rs  event_send_daemon.rs  queued_batcher.rs
core/src/auto_auth/: anon_user_id.rs  auth_token_storage.rs  campaign_anon_user_id_storage.rs  startup_deeplink_storage.rs
core/src/download_origin_metadata/: campaign_attribution_marker.rs  startup_location_storage.rs
core/src/environment/: macos.rs
core/src/installs/: compression.rs  download_speed_estimator.rs  downloads.rs
src/: App.tsx  index.tsx  theme.tsx
src-auto-auth/: Cargo.toml
src-auto-auth/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  sign.command.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore
src-tauri/scripts/: patch-config-sign-command.ps1  sign.bat  sign.ps1
src-tauri/src/: analytics.rs  app.rs  flow.rs  installs.rs  lib.rs  main.rs  s3.rs  types.rs  utils.rs
src-tauri/src/analytics/: client.rs  null_client.rs
src-tauri/src/installs/: compression.rs  downloads.rs
src-tauri/windows/: hooks.nsh
src/components/Home/: Home.styles.ts  Home.tsx  VersionLabel.tsx  types.ts
