[package]
name = "dcl-launcher-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "dcl_launcher_core"
path = "src/lib.rs"

[[bin]]
name = "dcl_launcher_core"
path = "src/main.rs"

[dependencies]
# fix for the issue: https://github.com/ebarnard/rust-plist/issues/151
deranged = "=0.4.0"
plist = "=1.7.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1.11.1"
anyhow = "1.0.97"

futures-util = "0.3.14"
tokio = { version = "1.44.1", features = ["full"] }

semver = "1.0.26"

tar = "0.4.44"
zip = "2.5.0"
flate2 = "1.1.0"

log = "0.4"
fern = "0.7.1"
humantime = "2.2.0"

segment = "0.2.6"
uuid = { version = "1.16.0", features = ["v4"] }

