[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "run_backend"
path = "src/bin/run_backend.rs"

[dependencies]
# fix for the issue: https://github.com/ebarnard/rust-plist/issues/151
deranged = "=0.4.0"
plist = "=1.7.0"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1.11.1"
anyhow = "1.0.97"

futures-util = "0.3.14"

semver = "1.0.26"

tar = "0.4.44"
zip = "2.5.0"
flate2 = "1.1.0"

log = "0.4"
fern = "0.7.1"
humantime = "2.2.0"

segment = "0.2.6"
uuid = { version = "1.16.0", features = ["v4"] }

