[package]
name = "Decentraland-Launcher"
# should be synchronized youwith tauri.conf.json !!!
version = "1.0.3"

description = "Decentraland Launcher App"
authors = ["Decentraland"]
edition = "2021"
default-run = "Decentraland-Launcher"

[[bin]]
name = "Decentraland-Launcher"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dcl-launcher-core = { path = "../core" }

# fix for the issue: https://github.com/ebarnard/rust-plist/issues/151
deranged = "=0.4.0"
plist = "=1.7.0"

anyhow = "1.0.97"

serde_json = "1.0.140"

tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
