[[bin]]
name = "Decentraland-Launcher"
path = "src/main.rs"

[package]
name = "Decentraland-Launcher"
version = "1.10.1"
description = "Decentraland Launcher App"
authors = [ "Decentraland",]
edition = "2021"
default-run = "Decentraland-Launcher"

[lib]
name = "app_lib"
crate-type = [ "staticlib", "cdylib", "rlib",]

[dependencies]
deranged = "=0.4.0"
plist = "=1.7.0"
anyhow = "1.0.97"
serde_json = "1.0.140"
tauri-plugin-deep-link = "2"
tauri-plugin-process = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies.dcl-launcher-core]
path = "../core"

[dependencies.tauri]
version = "2"
features = []

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
